--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,21 +48,21 @@
                         <form class="form-signin" method="POST" action="/register">
                             
                             <div class="form-label-group">
-                                <input type="text" name="name" class="form-control" placeholder="Name" required
+                                <input id="1" type="text" name="name" class="form-control" placeholder="Name" required
                                     autofocus>
-                                <label>Name</label>
+                                <label for="1">Name</label>
                             </div>
 
                             <div class="form-label-group">
-                                <input type="email" name="email" class="form-control" placeholder="Email address"
+                                <input id="2" type="email" name="email" class="form-control" placeholder="Email address"
                                     required>
-                                <label>Email address </label>
+                                <label for="2">Email address </label>
                             </div>
 
                             <div class="form-label-group">
-                                <input type="text" name="number" class="form-control" placeholder="Phone Number"
+                                <input id="3" type="text" name="number" class="form-control" placeholder="Phone Number"
                                     required>
-                                <label>Phone Number (without using +91 or 0)</label>
+                                <label for="3">Phone Number (without using +91 or 0)</label>
                             </div>
 
                             <select class="custom-select" name="college">
