--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -23,13 +23,13 @@
               <h5 class="card-title text-center">Sign In</h5>
               <form class="form-signin" method="POST" action="adminlogin">
                 <div class="form-label-group">
-                  <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
-                  <label>Username</label>
+                  <input id="username" type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+                  <label for="username">Username</label>
                 </div>
   
                 <div class="form-label-group">
-                  <input type="password" name="password" class="form-control" placeholder="Password" required>
-                  <label for="inputPassword">Password</label>
+                  <input id="password" type="password" name="password" class="form-control" placeholder="Password" required autofocus>
+                  <label for="password">Password</label>
                 </div>
                 <button class="btn btn-lg btn-grad btn-block text-uppercase" type="submit">Sign in</button>
                 <hr class="my-4">
